AMP/fix: login->form, errors, search in form tag

--- a/angular-starter/src/app/login-page/login-page.component.css
+++ b/angular-starter/src/app/login-page/login-page.component.css
@@ -1,3 +1,9 @@
-.form-inline {
-  justify-content: center;
+.container-fluid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+form {
+  margin-bottom: 1rem;
 }
