AMP/task8/fix: right init date-component

--- a/angular-starter/src/app/course-page/course-page.component.html
+++ b/angular-starter/src/app/course-page/course-page.component.html
@@ -28,7 +28,7 @@
     <date-component
       #myDate="ngModel"
       date-validator
-      [titleString]="Date"
+      [titleString]="'Date'"
       [(ngModel)]="course.value.date"
       [ngModelOptions]="{standalone: true}"
     ></date-component>
