AMP/task8/feature: date-component done

--- a/angular-starter/src/app/course-page/course-page.component.html
+++ b/angular-starter/src/app/course-page/course-page.component.html
@@ -13,7 +13,7 @@
       >
     </div>
 
-    <div class="input-group">
+    <div class="input-group mb-3">
       <div class="input-group-prepend">
         <span class="input-group-text">Description</span>
       </div>
