AMP/task8/features: authors fix, done

--- a/angular-starter/src/app/course-page/course-page.component.html
+++ b/angular-starter/src/app/course-page/course-page.component.html
@@ -61,7 +61,7 @@
       authors-validator
       required
       [titleString]="'Authors'"
-      [authorsList]="authorsList.value"
+      [authorsList]="authorsList.asObservable()"
       name="authors"
       #currentAuthors="ngModel"
       [ngModel]="course.value.authors"
