--- a/angular-starter/src/app/header/header.component.html
+++ b/angular-starter/src/app/header/header.component.html
@@ -10,6 +10,7 @@
   <breadcrumbs-component
     *ngIf="showBreadCrumbs"
   ></breadcrumbs-component>
-
-  <userinfo *ngIf="isAuth"></userinfo>
+  <userinfo
+    *ngIf="showUserInfo"
+  ></userinfo>
 </header>
