--- a/angular-starter/src/app/courses/toolbar/search/search.component.html
+++ b/angular-starter/src/app/courses/toolbar/search/search.component.html
@@ -1,11 +1,10 @@
 <div class="container-fluid">
-  <form class="form-inline" (submit)="find()">
+  <form class="form-inline" #form="ngForm" (submit)="submit(form)">
     <input type="text" class="form-control"
-      [(ngModel)]="searchText"
+      name="query"
+      ngModel
       placeholder="Search..."
-      (keyup.enter)="find()"
-      [ngModelOptions]="{standalone: true}"
-    >
-    <button class="btn btn-info" (click)="find()">Find</button>
+      >
+    <button class="btn btn-info" type="submit">Find</button>
   </form>
 </div>
