--- a/angular-starter/src/app/course-page/course-page.component.html
+++ b/angular-starter/src/app/course-page/course-page.component.html
@@ -74,11 +74,16 @@
     *ngIf="form.invalid"
     >All fields is required</div>
 
-    <test-editor></test-editor>
+    <button type="button" class="btn btn-secondary" (click)="toggle()">{{isEditor ? 'hide' : 'show'}}</button>
 
     <div class="btn-group" role="group" aria-label="Save">
       <button type="submit" class="btn btn-success" [disabled]="form.invalid">Save</button>
       <button type="button" class="btn btn-secondary" (click)="cancel()">Cancel</button>
     </div>
   </form>
+
+  <div *ngIf="isEditor">
+    <test-editor></test-editor>
+  </div>
+
 </div>
