--- a/angular-starter/src/app/course-page/editor-component/editor.template.html
+++ b/angular-starter/src/app/course-page/editor-component/editor.template.html
@@ -1,12 +1,15 @@
 <!-- Include stylesheet -->
 <!-- <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet"> -->
 
-<!-- Create the editor container -->
-<div id="editor">
-  <p>Hello World!</p>
-  <p>Some initial <strong>bold</strong> text</p>
-  <p><br></p>
+<div class="btn-group" role="group" aria-label="Save">
+  <button type="button" class="btn btn-secondary" (click)="log()">content</button>
+  <button type="button" class="btn btn-secondary" (click)="log2()">getText</button>
+  <button type="button" class="btn btn-secondary" (click)="set()">set</button>
+  <button type="button" class="btn btn-secondary" (click)="set2()">set2</button>
+  <button type="button" class="btn btn-secondary" (click)="getHtml()">getHtml</button>
 </div>
+<!-- Create the editor container -->
+<div id="editor"></div>
 
 <!-- Include the Quill library -->
 <!-- <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script> -->
