AMP/editor/set-get_html

--- a/angular-starter/src/app/course-page/editor-component/editor.template.html
+++ b/angular-starter/src/app/course-page/editor-component/editor.template.html
@@ -1,12 +1,13 @@
 <!-- Include stylesheet -->
 <!-- <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet"> -->
 
-<div class="btn-group" role="group" aria-label="Save">
+<div class="btn-group mb-3" role="group" aria-label="Save">
   <button type="button" class="btn btn-secondary" (click)="log()">content</button>
   <button type="button" class="btn btn-secondary" (click)="log2()">getText</button>
   <button type="button" class="btn btn-secondary" (click)="set()">set</button>
   <button type="button" class="btn btn-secondary" (click)="set2()">set2</button>
   <button type="button" class="btn btn-secondary" (click)="getHtml()">getHtml</button>
+  <button type="button" class="btn btn-secondary" (click)="setHtml()">setHtml</button>
 </div>
 <!-- Create the editor container -->
 <div id="editor"></div>
